# talks

./: README.md  figures  iros2017.md  mwrw_talk.md  theory_sem.md  toolchains.md
470/: 10-lecture.html  11-lecture.html  11-lecture.md  Makefile  talk.html  talk.md  talk2.html  talk2.md
470/css/: include.css
584/: Makefile  jeffe.sty  nilles_final_project.md
RAD_Lab/: Makefile  slides.md
UBISS26/: Makefile  talk.md
UBISS26/codesign/: Makefile  codesign-slides.md  metadata.yaml
UBISS26/embodiment/: Makefile  embodiment-slides.md  metadata-yaml.XXX  talk.md
UBISS26/seminar/: talk.md
amato_Oct19/: Makefile  talk.html  talk.md
amato_Oct19/css/: include.css
figures/: figures.cabal
figures/app/: Main.hs
figures/src/: Figs.hs
iros/: iros2017.html  iros2017.md
mitra_Oct19/: talk.html  talk.md
mitra_Oct19/css/: include.css
mitra_group_meeting/: slides.md
nasco/: nasco.md  outline.md
northwestern/: talk.html  talk.md
northwestern/css/: include.css
oulu/: talk.html  talk.md
oulu/css/: include.css
prelim/: Makefile  talk.html  talk.md  thesisrefs.bib
prelim/css/: include.css
prelim/images/: 4B-tl.wmv  crash.mkv  reorientation.mov
qual/: qual.md  roboqual.md
thesis/: Makefile  my.dzslides  my.reveal  talk.html  talk.md  thesisrefs.bib
thesis/css/: alli.css  metropolis.css  oldcss.css
uiuc/: toolchains.md
wafr/: Makefile  talk.html  talk.md
wafr/css/: include.css
