name:                figures
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/figures#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable figures-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , diagrams-core >= 1.1
                     , diagrams-lib >= 1.3
                     , diagrams-svg >= 1.3
                     , figures
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Figs
  build-depends:       base >= 4.7 && < 5
                     , diagrams-core >= 1.1
                     , diagrams-lib >= 1.3
                     , diagrams-svg >= 1.3
                     , colour
  default-language:    Haskell2010
  other-extensions:    NoMonomorphismRestriction
                     , FlexibleContexts


source-repository head
  type:     git
  location: https://github.com/alexandroid000/talks
